--- a/SocialNetwork/Views/Auth/Register.cshtml
+++ b/SocialNetwork/Views/Auth/Register.cshtml
@@ -31,6 +31,14 @@
                 </div>
 
                 <div class="form-group">
+                    @Html.LabelFor(model => model.Gender, htmlAttributes: new { @class = "control-label col-md-3" })
+                    <div class="col-md-9">
+                        @Html.DropDownListFor(model => model.Gender, new SelectList(ViewBag.Genders, "Value", "Text"), new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.Gender, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
                     @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-3" })
                     <div class="col-md-9">
                         @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
