--- a/SocialNetwork/Content/Site.css
+++ b/SocialNetwork/Content/Site.css
@@ -22,3 +22,11 @@ select,
 textarea {
     max-width: 280px;
 }
+
+
+.user-image 
+{
+    max-height: 250px;
+    max-width: 100%;
+    margin: 15px;
+}
