--- a/SocialNetwork/Views/Image/Index.cshtml
+++ b/SocialNetwork/Views/Image/Index.cshtml
@@ -49,11 +49,14 @@
     }
 </div>
 
-
-
-
 @section scripts {
     @Scripts.Render("~/bundles/jquery-file-upload/js")
+
+    <script>
+        $(function () {
+            images.init({ userId: @Model.UserId })
+        });
+    </script>
 }
 
 
