--- a/SocialNetwork/Content/Site.css
+++ b/SocialNetwork/Content/Site.css
@@ -23,7 +23,6 @@ textarea {
     max-width: 280px;
 }
 
-
 .user-image 
 {
     max-height: 250px;
@@ -31,6 +30,15 @@ textarea {
     margin: 15px;
 }
 
+.friend-status
+{
+    width: 40px;
+    height: 13px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 0;
+}
 .large-image
 {
     max-width: 100%;
