--- a/SocialNetwork/Views/Shared/_Layout.cshtml
+++ b/SocialNetwork/Views/Shared/_Layout.cshtml
@@ -60,6 +60,8 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/handlebars")
+    @Styles.Render("~/Content/profile-styles")
+    @Scripts.Render("~/bundles/profile-scripts")
     @RenderSection("scripts", required: false)
 </body>
 </html>
