--- a/SocialNetwork/Views/Shared/ProfileInfo.cshtml
+++ b/SocialNetwork/Views/Shared/ProfileInfo.cshtml
@@ -16,7 +16,7 @@
                         <td>@Html.DisplayNameFor(model => model.Interests)</td>
                         <td>@Html.DisplayNameFor(model => model.Information)</td>
                         <td>@Html.DisplayNameFor(model => model.BirthDate)</td>
-                        <td>@Html.DisplayName("Profila attēls")</td>
+                        <td>@Html.DisplayName("Profile image")</td>
                     </tr>
                 </thead>
                 <tbody style="text-align:center;">
@@ -29,7 +29,7 @@
                         <td><a href="#" id="About">@Html.DisplayFor(model => model.Information)</a></td>
                         <td><a href="#" id="DateOfBirth">@Html.DisplayFor(model => model.BirthDate)</a></td>
                         <td>
-                            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#image-modal">Nomainīt</button>
+                            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#image-modal">Change</button>
                         </td>
                     </tr>
                 </tbody>
