--- a/SocialNetwork/Views/Friend/Index.cshtml
+++ b/SocialNetwork/Views/Friend/Index.cshtml
@@ -5,7 +5,9 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Friends</h2>
+<div class="alert alert-success">
+    <h2>My Friends: </h2>
+</div>
 
 <div class="row">
     @{
@@ -14,10 +16,19 @@
         foreach (var user in Model)
         {
             <div class="col-sm-3">
-                <img class="user-image" src="~/Images/@user.Avatar" />
-                <span class="label label-success friend-status">draugs</span>
-                <div>
-                    @user.FirstName
+                @if (user.Avatar != null)
+                {
+                    <img class="user-image" src="~/Images/@user.Avatar" />
+                }
+                else
+                {
+                    <img class="user-image" src="~/Images/default.gif" />
+                }
+                
+                <button class="btn btn-danger remove-friend" data-userId="@user.UserID"><span class="glyphicon glyphicon-minus"></span></button>
+
+                <div class="text-center user-name">
+                    <h4>@user.FirstName @user.LastName</h4>
                 </div>
                 
             </div>
@@ -32,7 +43,22 @@
     }
 </div>
 
+<div id="removeFriendModal" class="modal fade" role="dialog">
+</div>
+
 Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
 
 @Html.PagedListPager(Model, page => Url.Action("Index",
     new { page }))
+
+
+
+@section scripts{
+    @Scripts.Render("~/bundles/friends")
+
+    <script>
+        $(function () {
+            friends.init();
+        });
+    </script>
+}
