--- a/SocialNetwork/Content/Site.css
+++ b/SocialNetwork/Content/Site.css
@@ -30,15 +30,21 @@ textarea {
     margin: 15px;
 }
 
-.friend-status
+.remove-friend
 {
-    width: 40px;
-    height: 13px;
+    width: 30px;
+    height: 20px;
     position: absolute;
-    top: 0;
+    top: 15px;
     right: 0;
     padding: 0;
 }
+
+.user-name
+{
+    margin-top: -18px;
+}
+
 .large-image
 {
     max-width: 100%;
