--- a/SocialNetwork/Views/Friend/Index.cshtml
+++ b/SocialNetwork/Views/Friend/Index.cshtml
@@ -22,7 +22,7 @@
                 }
                 else
                 {
-                    <img class="user-image" src="~/Images/default.gif" />
+                    <img class="user-image" src="~/Content/img/default.gif" />
                 }
                 
                 <button class="btn btn-danger remove-friend" data-userId="@user.UserID"><span class="glyphicon glyphicon-minus"></span></button>
