--- a/SocialNetwork/Content/Site.css
+++ b/SocialNetwork/Content/Site.css
@@ -44,3 +44,11 @@ textarea {
     max-width: 100%;
     margin: 15px;
 }
+
+.friend-search {
+    margin: 30px 0 30px 0;
+}
+
+.friend-search .btn {
+    margin-top: 25px;
+}
