--- a/SocialNetwork/Views/Shared/_Layout.cshtml
+++ b/SocialNetwork/Views/Shared/_Layout.cshtml
@@ -26,6 +26,8 @@
                     <li>@Html.MenuItem("Home", "Index", "Home")</li>
                     <li>@Html.MenuItem("About", "About", "Home")</li>
                     <li>@Html.MenuItem("Contact", "Contact", "Home")</li>
+                    <li>@Html.MenuItem("Discover People", "Discover", "Friend")</li>
+
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
 
