--- a/SocialNetwork/Views/Shared/ProfileInfo.cshtml
+++ b/SocialNetwork/Views/Shared/ProfileInfo.cshtml
@@ -2,6 +2,7 @@
 
 
 
+
 <div class="row">
     <div class="col-md-10 col-md-offset-1">
 
@@ -39,10 +40,52 @@
     </div>
 </div>
 
-<div class="modal modal-sm" tabindex="-1" role="dialog" aria-labelledby="image-modal" id="image-modal">
+<div class="modal fade bs-example-modal-sm" tabindex="-1" id="image-modal" role="dialog" aria-labelledby="imageModal">
     <div class="modal-dialog modal-sm">
         <div class="modal-content">
-            IMAGE
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="myModalLabel">Profile Image</h4>
+            </div>
+
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="container">
+                            @{
+                                if (Model.Avatar != null)
+                                {
+                                    <div class="col-sm-3">
+                                        <img class="user-image" src="~/Images/Avatars/@Model.Avatar" />
+                                    </div>
+                                }
+                                else
+                                {
+                                    <br>
+                                    <span class="btn btn-success fileinput-button">
+                                        <i class="glyphicon glyphicon-plus"></i>
+                                        <span>Select file...</span>
+                                        <input id="profile-image" type="file" name="profile-image">
+                                    </span>
+                                        <br>
+                                        <br>
+                                        <div id="progress" class="progress" style="width: 250px;">
+                                            <div class="progress-bar progress-bar-success"></div>
+                                        </div>
+                                        <div id="image" class="files"></div>
+                                        <br>
+                                }
+                            }
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+
         </div>
     </div>
 </div>
