--- a/SocialNetwork/Views/Friend/Index.cshtml
+++ b/SocialNetwork/Views/Friend/Index.cshtml
@@ -18,7 +18,7 @@
             <div class="col-sm-3">
                 @if (user.Avatar != null)
                 {
-                    <img class="user-image" src="~/Images/@user.Avatar" />
+                    <img class="user-image" src="~/Images/Avatars/@user.Avatar" />
                 }
                 else
                 {
