Delete old avatar, on new upload

--- a/SocialNetwork/Views/Shared/ProfileInfo.cshtml
+++ b/SocialNetwork/Views/Shared/ProfileInfo.cshtml
@@ -55,7 +55,7 @@
                             @{
                                 if (Model.Avatar != null)
                                 {
-                                    <div class="col-sm-3">
+                                    <div class="col-sm-2 thumbnail">
                                         <img class="user-image" src="~/Images/Avatars/@Model.Avatar" />
                                     </div>
                                 }
