--- a/SocialNetwork/Views/Profile/Index.cshtml
+++ b/SocialNetwork/Views/Profile/Index.cshtml
@@ -20,5 +20,7 @@
 
 @section scripts {
     @Scripts.Render("~/bundles/jquery-file-upload/js")
+@Styles.Render("~/Content/profile-styles")
+@Scripts.Render("~/bundles/profile-scripts")
 
 }
