--- a/SocialNetwork/Content/Site.css
+++ b/SocialNetwork/Content/Site.css
@@ -25,8 +25,9 @@ textarea {
 
 .user-image 
 {
+
     max-height: 250px;
-    max-width: 100%;
+    width: 100%;
     margin: 15px;
 }
 
@@ -36,7 +37,7 @@ textarea {
     height: 20px;
     position: absolute;
     top: 15px;
-    right: 12px;
+    right: 0;
     padding: 0;
 }
 
