--- a/SocialNetwork/Views/Friend/Discover.cshtml
+++ b/SocialNetwork/Views/Friend/Discover.cshtml
@@ -10,38 +10,31 @@
     @Html.Partial("_SearchResults")
 </div>
 
-@section scripts {
-    @Scripts.Render("~/bundles/jquery")
+<div id="add-friend-modal" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Invitation</h4>
+            </div>
+            <div class="modal-body">
+                <div class="alert alert-success">
+                    <h2 class="text-center">Invitation Sent!</h2>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default text-center" id="add-friend-finish" data-dismiss="modal">Ok</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+@section scripts{
+    @Scripts.Render("~/bundles/friends")
 
     <script>
-        $(document).ready(function () {
-
-            $("[id^='search'], #search-gender").bind("keyup change", function () {
-                filterPeople($(".pagination").find(".active a").html(), $("#search-name").val(), $("#search-last-name").val(), $("#search-gender").val());
-
-            })
-
-            function filterPeople(page, firstName, lastName, gender) {
-
-                $.ajax({
-                    url: "/Friend/FilterPeople",
-                    type: "GET",
-                    data: {
-                        page: page,
-                        firstName: !firstName ? null : firstName,
-                        lastName: !lastName ? null : lastName,
-                        gender: gender != "Select gender" ? gender : null
-                    },
-                    success: function (data) {
-                        $("#result-container").html(data)
-                        console.log("success");
-                    },
-                    error: function (error) {
-                        console.log(error);
-                        console.log("zzzz");
-                    }
-                })
-            }
-        })
+        $(function () {
+            friends.init();
+        });
     </script>
 }
