--- a/SocialNetwork/Views/Profile/Index.cshtml
+++ b/SocialNetwork/Views/Profile/Index.cshtml
@@ -1,17 +1,19 @@
-﻿@model SocialNetwork.ViewModels.Profile.ProfileInfoViewModel
+﻿@model SocialNetwork.ViewModels.ProfileViewModel
 @{
     ViewBag.Title = "Profile";
 }
 @Styles.Render("~/bundles/jquery-file-upload/css")
 
 
-<div class="row">
+<div class="row" style="margin-top: 20px;">
     <div class="col-md-12">
         <ul class="nav nav-tabs" role="tablist">
             <li role="presentation" class="active"><a href="#profile-information" aria-controls="profile-information" role="tab" data-toggle="tab">Profile information</a></li>
+            <li role="presentation" class=""><a href="#invitations-list" aria-controls="invitations-list" role="tab" data-toggle="tab">Invitations list</a></li>
         </ul>
         <div class="tab-content">
-            <div role="tabpanel" class="tab-pane active" id="profile-information">@Html.Partial("ProfileInfo")</div>
+            <div role="tabpanel" class="tab-pane active" id="profile-information">@Html.Partial("ProfileInfo",Model.ProfileInfoViewModel)</div>
+            <div role="tabpanel" class="tab-pane" id="invitations-list">Invitations@*@Html.Partial("InvitationPartial")*@</div>
         </div>
     </div>
 
@@ -19,7 +21,7 @@
 
 
 @section scripts {
-    @Scripts.Render("~/bundles/jquery-file-upload/js")
+@Scripts.Render("~/bundles/jquery-file-upload/js")
 @Styles.Render("~/Content/profile-styles")
 @Scripts.Render("~/bundles/profile-scripts")
 
