--- a/SocialNetwork/Views/Friend/Index.cshtml
+++ b/SocialNetwork/Views/Friend/Index.cshtml
@@ -5,8 +5,8 @@
     ViewBag.Title = "Index";
 }
 
-<div class="alert alert-success">
-    <h2>My Friends: </h2>
+<div class="text-center">
+    <h2>My Friends </h2>
 </div>
 
 <div id="result-container">
