--- a/SocialNetwork/Content/Site.css
+++ b/SocialNetwork/Content/Site.css
@@ -25,9 +25,9 @@ textarea {
 
 .user-image 
 {
-    max-height: 250px;
-    max-width: 100%;
-    margin: 15px;
+    max-height: 150px;
+    width: auto;
+    
 }
 
 .friend-status
@@ -43,4 +43,27 @@ textarea {
 {
     max-width: 100%;
     margin: 15px;
+}
+
+.center-block 
+{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.image-comment-update 
+{
+    margin-left: 10px;
+}
+
+.comment-edit 
+{
+    display: none;
+}
+
+#comment 
+{
+    max-width: 60% !important;
+    margin-bottom: 15px;
 }
