--- a/SocialNetwork/Views/Friend/Index.cshtml
+++ b/SocialNetwork/Views/Friend/Index.cshtml
@@ -10,7 +10,7 @@
 </div>
 
 <div id="result-container">
-    @Html.Partial("_SearchResults")
+    @Html.Partial("_SearchResultsFriends")
 </div>
 
 <div id="removeFriendModal" class="modal fade" role="dialog">
