--- a/SocialNetwork/Views/Friend/_SearchResultsFriends.cshtml
+++ b/SocialNetwork/Views/Friend/_SearchResultsFriends.cshtml
@@ -17,7 +17,7 @@
                     <img class="user-image" src="~/Content/img/default.gif" />
                 }
 
-                <button class="btn btn-success add-friend" data-userId="@user.UserID"><span class="glyphicon glyphicon-plus"></span></button>
+                <button class="btn btn-danger remove-friend" data-userId="@user.UserID"><span class="glyphicon glyphicon-minus"></span></button>
 
                 <div class="text-center user-name">
                     <h4>@Html.ActionLink(user.FirstName + " " + user.LastName, "ViewProfile", "Profile", new { id = user.UserID }, null)</h4>
